--- a/index.html
+++ b/index.html
@@ -7,7 +7,53 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    
+    <div class="mainWrapper">
+      <div class="homePage container">
+        <div class="navigation">
+          <a href="#">Homepage</a>
+          |
+          <a href="#">Gallery</a>
+        </div>
+        <div class="gallery">
+          <div class="galleryItem">
+            <img src="./assets/images/1.webp" alt="image1" />
+            <p>Nata kuku x gucci</p>
+          </div>
+          <div class="galleryItem">
+            <img src="./assets/images/2.webp" alt="image2" />
+            <p>collection 2025</p>
+          </div>
+          <div class="galleryItem">
+            <img src="./assets/images/3.webp" alt="image1" />
+            <p>spring summer</p>
+          </div>
+          <div class="galleryItem">
+            <img src="./assets/images/4.webp" alt="image1" />
+            <p>Nata kuku x gucci</p>
+          </div>
+          <div class="galleryItem">
+            <img src="./assets/images/5.webp" alt="image1" />
+            <p>collection 2025</p>
+          </div>
+          <div class="galleryItem">
+            <img src="./assets/images/6.webp" alt="image1" />
+            <p>spring summer</p>
+          </div>
+          <div class="galleryItem">
+            <img src="./assets/images/7.webp" alt="image1" />
+            <p>Nata kuku x gucci</p>
+          </div>
+          <div class="galleryItem">
+            <img src="./assets/images/8.webp" alt="image1" />
+            <p>collection 2025</p>
+          </div>
+          <div class="galleryItem">
+            <img src="./assets/images/9.webp" alt="image1" />
+            <p>spring summer</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
   <script src="./script.js"></script>
 </html>
