added hover effect

--- a/index.html
+++ b/index.html
@@ -16,40 +16,31 @@
         </div>
         <div class="gallery">
           <div class="galleryItem">
-            <img src="./assets/images/1.webp" alt="image1" />
-            <p>Nata kuku x gucci</p>
+            <div><p>Nata kuku x gucci</p></div>
           </div>
           <div class="galleryItem">
-            <img src="./assets/images/2.webp" alt="image2" />
-            <p>collection 2025</p>
+            <div><p>collection 2025</p></div>
           </div>
           <div class="galleryItem">
-            <img src="./assets/images/3.webp" alt="image1" />
-            <p>spring summer</p>
+            <div><p>spring summer</p></div>
           </div>
           <div class="galleryItem">
-            <img src="./assets/images/4.webp" alt="image1" />
-            <p>Nata kuku x gucci</p>
+            <div><p>Nata kuku x gucci</p></div>
           </div>
           <div class="galleryItem">
-            <img src="./assets/images/5.webp" alt="image1" />
-            <p>collection 2025</p>
+            <div><p>collection 2025</p></div>
           </div>
           <div class="galleryItem">
-            <img src="./assets/images/6.webp" alt="image1" />
-            <p>spring summer</p>
+            <div><p>spring summer</p></div>
           </div>
           <div class="galleryItem">
-            <img src="./assets/images/7.webp" alt="image1" />
-            <p>Nata kuku x gucci</p>
+            <div><p>Nata kuku x gucci</p></div>
           </div>
           <div class="galleryItem">
-            <img src="./assets/images/8.webp" alt="image1" />
-            <p>collection 2025</p>
+            <div><p>collection 2025</p></div>
           </div>
           <div class="galleryItem">
-            <img src="./assets/images/9.webp" alt="image1" />
-            <p>spring summer</p>
+            <div><p>spring summer</p></div>
           </div>
         </div>
       </div>
