finish gallery section with media

--- a/index.html
+++ b/index.html
@@ -15,32 +15,59 @@
           <a href="#">Gallery</a>
         </div>
         <div class="gallery">
-          <div class="galleryItem">
-            <div><p>Nata kuku x gucci</p></div>
+          <div class="galleryItemWrapper">
+            <div class="galleryItem">
+              <div><p>Nata kuku x gucci</p></div>
+            </div>
+            <p>Nata kuku x gucci</p>
           </div>
-          <div class="galleryItem">
-            <div><p>collection 2025</p></div>
+          <div class="galleryItemWrapper">
+            <div class="galleryItem">
+              <div><p>collection 2025</p></div>
+            </div>
+            <p>collection 2025</p>
           </div>
-          <div class="galleryItem">
-            <div><p>spring summer</p></div>
+          <div class="galleryItemWrapper">
+            <div class="galleryItem">
+              <div><p>spring summer</p></div>
+            </div>
+            <p>spring summer</p>
           </div>
-          <div class="galleryItem">
-            <div><p>Nata kuku x gucci</p></div>
+          <div class="galleryItemWrapper">
+            <div class="galleryItem">
+              <div><p>Nata kuku x gucci</p></div>
+            </div>
+            <p>Nata kuku x gucci</p>
           </div>
-          <div class="galleryItem">
-            <div><p>collection 2025</p></div>
+          <div class="galleryItemWrapper">
+            <div class="galleryItem">
+              <div><p>collection 2025</p></div>
+            </div>
+            <p>collection 2025</p>
           </div>
-          <div class="galleryItem">
-            <div><p>spring summer</p></div>
+          <div class="galleryItemWrapper">
+            <div class="galleryItem">
+              <div><p>spring summer</p></div>
+            </div>
+            <p>spring summer</p>
           </div>
-          <div class="galleryItem">
-            <div><p>Nata kuku x gucci</p></div>
+          <div class="galleryItemWrapper">
+            <div class="galleryItem">
+              <div><p>Nata kuku x gucci</p></div>
+            </div>
+            <p>Nata kuku x gucci</p>
           </div>
-          <div class="galleryItem">
-            <div><p>collection 2025</p></div>
+          <div class="galleryItemWrapper">
+            <div class="galleryItem">
+              <div><p>collection 2025</p></div>
+            </div>
+            <p>collection 2025</p>
           </div>
-          <div class="galleryItem">
-            <div><p>spring summer</p></div>
+          <div class="galleryItemWrapper">
+            <div class="galleryItem">
+              <div><p>spring summer</p></div>
+            </div>
+            <p>spring summer</p>
           </div>
         </div>
       </div>
