--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="mainWrapper">
       <div class="homePage container">
         <div class="navigation">
-          <a href="#">Homepage</a>
+          <a href="./contact.html">Homepage</a>
           |
           <a href="#">Gallery</a>
         </div>
