--- a/index.html
+++ b/index.html
@@ -17,55 +17,55 @@
         <div class="gallery">
           <div class="galleryItemWrapper">
             <div class="galleryItem">
-              <div><p>Nata kuku x gucci</p></div>
+              <p>Nata kuku x gucci</p>
             </div>
             <p>Nata kuku x gucci</p>
           </div>
           <div class="galleryItemWrapper">
             <div class="galleryItem">
-              <div><p>collection 2025</p></div>
+              <p>collection 2025</p>
             </div>
             <p>collection 2025</p>
           </div>
           <div class="galleryItemWrapper">
             <div class="galleryItem">
-              <div><p>spring summer</p></div>
+              <p>spring summer</p>
             </div>
             <p>spring summer</p>
           </div>
           <div class="galleryItemWrapper">
             <div class="galleryItem">
-              <div><p>Nata kuku x gucci</p></div>
+              <p>Nata kuku x gucci</p>
             </div>
             <p>Nata kuku x gucci</p>
           </div>
           <div class="galleryItemWrapper">
             <div class="galleryItem">
-              <div><p>collection 2025</p></div>
+              <p>collection 2025</p>
             </div>
             <p>collection 2025</p>
           </div>
           <div class="galleryItemWrapper">
             <div class="galleryItem">
-              <div><p>spring summer</p></div>
+              <p>spring summer</p>
             </div>
             <p>spring summer</p>
           </div>
           <div class="galleryItemWrapper">
             <div class="galleryItem">
-              <div><p>Nata kuku x gucci</p></div>
+              <p>Nata kuku x gucci</p>
             </div>
             <p>Nata kuku x gucci</p>
           </div>
           <div class="galleryItemWrapper">
             <div class="galleryItem">
-              <div><p>collection 2025</p></div>
+              <p>collection 2025</p>
             </div>
             <p>collection 2025</p>
           </div>
           <div class="galleryItemWrapper">
             <div class="galleryItem">
-              <div><p>spring summer</p></div>
+              <p>spring summer</p>
             </div>
             <p>spring summer</p>
           </div>
@@ -73,5 +73,5 @@
       </div>
     </div>
   </body>
-  <script src="./script.js"></script>
+  <!-- <script src="./script.js"></script> -->
 </html>
